# git-evolve

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  create-project.sh  pyproject.toml
.github/workflows/: ci.yml
git_evolve/: __init__.py  analyzer.py  cli.py
git_evolve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_analyzer.py  test_cli.py
